# genre-study-web-app

./: Cargo.toml
src/: main.rs
src/templates/: examples.hbs  index.hbs  index.html  navbar.hbs  styles.hbs
