[package]
name = "genre-study-web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["server", "tcp", "http1"] }
tokio = { version = "1.15", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = "0.4.0"
handlebars = "4.1"
serde_json = "1.0"